--- a/front-end/app/views/index.scala.html
+++ b/front-end/app/views/index.scala.html
@@ -8,23 +8,23 @@
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc1/angular-material.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
 </head>
-<body>
+<body id="body">
   <md-toolbar>
     <div class="md-toolbar-tools">
       <span>E-Commerce App</span>
         <!-- fill up the space between left and right area -->
       <span flex></span>
-      <md-button ng-click="logMeIn()">Login/Register</md-button>
+      <md-button onClick = "logMeIn()">Login/Register</md-button>
     </div>
   </md-toolbar>
-  <ul class="menu">
+  <!--<ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
-  </ul>
+  </ul>-->
 
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
+  <!--<div>Angular seed app: v<span app-version></span></div>-->
   <script data-main="@routes.Assets.versioned("js/main.js")" src="@routes.Assets.versioned("lib/requirejs/require.js")"></script>
 </body>
 </html>
