--- a/front-end/app/views/index.scala.html
+++ b/front-end/app/views/index.scala.html
@@ -9,11 +9,17 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
 </head>
 <body id="body">
-  <md-toolbar>
-    <div class="md-toolbar-tools">
-      <span>E-Commerce App</span>
+  <md-toolbar class= "row" flex = "100">
+    <div class="md-toolbar-tools" class= "row" flex = "100">
+      <div flex = "20"><span>E-Commerce App</span></div>
         <!-- fill up the space between left and right area -->
       <span flex></span>
+      <md-tabs md-dynamic-height md-border-bottom flex="80" md-center-tabs>
+          <md-tab class "tabItemLabel md-accent" label="ITEMS"  onClick = "goTo('#/items')">
+          </md-tab>
+          <md-tab  label="MY ACCOUNT" onClick = "goTo('#/account')">
+          </md-tab>
+      </md-tabs>
       <md-button onClick = "logMeIn()">Login/Register</md-button>
     </div>
   </md-toolbar>
@@ -21,7 +27,6 @@
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>-->
-
   <div ng-view></div>
 
   <!--<div>Angular seed app: v<span app-version></span></div>-->
