Initial user view, where he can see his details, see the items he has uploaded and he can upload new items

--- a/front-end/public/css/app.css
+++ b/front-end/public/css/app.css
@@ -46,6 +46,12 @@ md-tabs > md-tabs-wrapper > md-tabs-canvas > md-pagination-wrapper > md-tab-item
 {
   margin-top: 20px;
 }
+#noItemsWrapper
+{
+  opacity: 0.78;
+  margin-top: 60px;
+}
+
 .title
 {
   opacity: 0.78;
