--- a/front-end/public/partials/account.html
+++ b/front-end/public/partials/account.html
@@ -9,15 +9,59 @@
     </md-tabs>
 </div>
 <div id = "accountWrapper">
-    <div ng-show = "showAccountPart == 'profile'">
-        <span class = "md-display-2"> PROFILE HERE </span>
-        <span>{{username}}</span>
-        <span>{{password}}</span>
+    <div ng-show = "showAccountPart == 'profile'" layout = "column" flex = "60" flex-offset = "10">
+        <md-input-container class="md-block" flex-gt-xs>
+            <label>Your Username</label>
+            <input ng-model = "username" disabled>
+        </md-input-container>
+        <md-input-container class = "md-block" flex-gt-xs>
+            <label>Your Password</label>
+            <input ng-model = "password" disabled>
+        </md-input-container>
     </div>
-    <div ng-show = "showAccountPart == 'items'">
-        <span class = "md-display-2"> ITEMS HERE </span>
+    <div ng-show = "showAccountPart == 'items'" layout = "column" flex = "60" flex-offset = "10">
+        <div layout = "row" layout-wrap flex-offset = "10" flex-offset-sm = "0">
+            <md-card ng-repeat="item in myItems" flex = "30" flex-sm = "100" >
+                <md-card-title layout-align = "center center">
+                    <md-card-title-text layout-align = "center center">
+                        <center><span class="md-headline title">{{item.name}}</span></center>
+                    </md-card-title-text>
+                </md-card-title>
+                <md-card-content layout = "column" layout-align = "center center">
+                    <div flex = "100"> 
+                        <img src="http://www.pngall.com/wp-content/uploads/2016/04/Table-High-Quality-PNG.png" heignt = "150" width="150" />
+                    </div>
+                    <div flex = "100">
+                        <span class="md-title"> {{item.price | currency}}</span>
+                    </div>
+                </md-card-content>
+                <md-card-actions layout = "row">
+                    <div layout = "row" flex = "100">
+                        <md-button flex = "100" class = "md-primary md-raised">View Details</md-button>
+                    </div>
+                </md-card-actions>
+            </md-card>
+        </div>
     </div>
-    <div ng-show = "showAccountPart == 'create'">
-        <span class = "md-display-2"> CREATE HERE </span>
+    <div ng-show = "showAccountPart == 'create'" layout = "column" flex = "60" flex-offset = "10">
+            <div layout = "column" flex = "100">                
+                <md-input-container class="md-block" flex-gt-xs>
+                    <label>Item Name</label>
+                    <input ng-model = "itemName">
+                </md-input-container>
+                <md-input-container class = "md-block" flex-gt-xs>
+                    <label>Item Description</label>
+                    <input ng-model = "itemDescription" >
+                </md-input-container>
+                <md-input-container class = "md-block" flex-gt-xs>
+                    <label>Item Price</label>
+                    <input ng-model = "itemPrice" >
+                </md-input-container>
+                <input type="file"></input>
+            </div>
+            <div layout = "column" flex = "100" layout-align = "center end">
+                <md-button class="md-fab" aria-label="Add Item" ng-click = "uploadItem()">
+                </md-button>
+            </div>
     </div>
 </div>
