New front end functionalities, adding messages, viewing messages...

--- a/front-end/public/partials/account.html
+++ b/front-end/public/partials/account.html
@@ -37,7 +37,7 @@
                 </md-card-content>
                 <md-card-actions layout = "row">
                     <div layout = "row" flex = "100">
-                        <md-button flex = "100" class = "md-primary md-raised">View Details</md-button>
+                        <md-button flex = "100" class = "md-primary md-raised" ng-click = "seeItemDetails(item.id)">View Details</md-button>
                     </div>
                 </md-card-actions>
             </md-card>
