--- a/front-end/public/partials/items.html
+++ b/front-end/public/partials/items.html
@@ -28,7 +28,7 @@
             </md-card-content>
             <md-card-actions layout = "row">
                 <div layout = "row" flex = "100">
-                    <md-button flex = "100" class = "md-primary md-raised">View Details</md-button>
+                    <md-button flex = "100" class = "md-primary md-raised" ng-click = "itemDetails(item.id)">View Details</md-button>
                 </div>
             </md-card-actions>
         </md-card>
