Added more messaging functionalities

--- a/front-end/public/css/app.css
+++ b/front-end/public/css/app.css
@@ -72,3 +72,7 @@ md-tabs > md-tabs-wrapper > md-tabs-canvas > md-pagination-wrapper > md-tab-item
 {
   margin-top: 50px;
 }
+#sellBtn
+{
+  margin-top: 25px;
+}
