--- a/front-end/public/views/account-item-details.html
+++ b/front-end/public/views/account-item-details.html
@@ -1,4 +1,4 @@
-<md-dialog id = "itemDetails" aria-label = "Item Details" flex = "60" layout = "column">
+<md-dialog id = "itemDetails" aria-label = "Item Details" flex = "70" layout = "column">
     <md-toolbar class= "row" flex = "100">
         <div class="md-toolbar-tools" class= "row" flex = "100">
             <div flex = "70"><span>Details of {{item.name}}</span></div>
@@ -13,7 +13,8 @@
         <div id = "itemImgDiv" layout = "column" flex = "50" layout-margin>
             <img src = "http://www.pngall.com/wp-content/uploads/2016/04/Table-High-Quality-PNG.png" height = "200px" width = "100%"/>
             <br />
-            <div flex-offset = "5"><span class = "md-subhead title">Price : {{item.price}}</span></div>
+            <div flex-offset = "5"><span class = "md-title title">Price : {{item.price |currency}}</span></div>
+            <br />
             <span flex-offset = "5" class = "md-subhead title">DESCRIPTION:</span>
             <div flex-offset = "5"><span class = "md-subhead title">{{item.description}}</span></div>
         </div>
@@ -26,12 +27,13 @@
             <md-list flex>
                 <div ng-repeat = "message in messages">
                     <md-subheader class="md-no-sticky">Message sender: {{message.userId}}</md-subheader>
-                    <md-list-item class="md-2-line">
-                        <img ng-src="{{todos[0].face}}?20" class="md-avatar" alt="{{todos[0].who}}" />
+                    <md-list-item class="md-3-line" layout = "row" flex = "100" layout-align = "start start">
+                        <img md-svg-icon="communication:phone" ng-src="{{todos[0].face}}?20" class="md-avatar" />
                         <div class="md-list-item-text">
                             <h3>Message Header</h3>
                             <p>{{message.message}}</p>
                         </div>
+                         <md-button id = "sellBtn" class="md-raised md-accent" ng-click = "sellItem(item.id)"> Sell </md-button>
                     </md-list-item>
                     <md-divider ></md-divider>
                 </div>
