--- a/front-end/app/views/index.scala.html
+++ b/front-end/app/views/index.scala.html
@@ -14,7 +14,7 @@
       <div flex = "20"><span>E-Commerce App</span></div>
         <!-- fill up the space between left and right area -->
       <span flex></span>
-      <md-tabs md-dynamic-height md-border-bottom flex="80" md-center-tabs ng-if = "currentUser !== ''">
+      <md-tabs id = "main_tabs" md-dynamic-height md-border-bottom flex="80" md-center-tabs ng-if = "currentUser !== ''">
           <md-tab class "tabItemLabel md-accent" label="ITEMS"  onClick = "goTo('#/items')"></md-tab>
           <md-tab  label="MY ACCOUNT" onClick = "goTo('#/account')"></md-tab>
           <md-tab  label="DOCUMENTATION" onClick = "goTo('#/documentation')"></md-tab>
