--- a/front-end/public/partials/account.html
+++ b/front-end/public/partials/account.html
@@ -50,20 +50,22 @@
             <div layout = "column" flex = "100">                
                 <md-input-container class="md-block" flex-gt-xs>
                     <label>Item Name</label>
-                    <input ng-model = "itemName">
+                    <input ng-model = "itemName" required>
                 </md-input-container>
                 <md-input-container class = "md-block" flex-gt-xs>
                     <label>Item Description</label>
-                    <input ng-model = "itemDescription" >
+                    <input ng-model = "itemDescription" required>
                 </md-input-container>
                 <md-input-container class = "md-block" flex-gt-xs>
                     <label>Item Price</label>
-                    <input ng-model = "itemPrice" >
+                    <input ng-model = "itemPrice" required>
                 </md-input-container>
-                <input type="file"></input>
+                <input type="file" required></input>
             </div>
-            <div layout = "column" flex = "100" layout-align = "center end">
-                <md-button class="md-fab" aria-label="Add Item" ng-click = "uploadItem()">
+            <div layout = "column" flex = "100" layout-align = "end end">
+                <md-button class="md-fab" aria-label="Add Item" ng-click = "uploadItem()"
+                    ng-disabled = "itemName == '' || itemDescription == '' || itemPrice == ''">
+                    <md-icon md-svg-icon="img/send.svg"></md-icon>
                 </md-button>
             </div>
     </div>
