--- a/front-end/public/partials/items.html
+++ b/front-end/public/partials/items.html
@@ -1,20 +1,19 @@
 <div id = "itemsWrapper" layout = "column" flex = "100"  ng-if = "items.length > 0">
     <div id="filter" layout="row" layout-wrap flex-offset = "10"> 
         <div layout="row" layout-wrap flex="80" flex-offset="10" layout="row">
-            <div flex="2">
-                <ng-md-icon icon="search" style="fill:gray" size="32"></ng-md-icon>
-            </div>
             <div flex="90">
                 <md-input-container md-no-float class="md-block">
+                    <md-icon md-svg-icon="img/search.svg"></md-icon>
                      <input ng-model="search" placeholder="Search......">
                </md-input-container>
            </div>
        </div>
     </div>
     <div layout = "row" layout-wrap flex-offset = "10" flex-offset-sm = "0">
-        <md-card ng-repeat="item in items | filter:search" flex = "30" flex-sm = "100" >
-            <md-card-title layout-align = "center center">
-                <md-card-title-text layout-align = "center center">
+        <!--<item-card></item-card>-->
+        <md-card ng-repeat="item in items | filter:search" flex = "30" flex-sm = "100">
+           <md-card-title layout-align = "center center">
+                <md-card-title-text id = "cardTitleText" layout-align = "center center">
                     <center><span class="md-headline title">{{item.name}}</span></center>
                 </md-card-title-text>
             </md-card-title>
