--- a/front-end/public/views/account-item-details.html
+++ b/front-end/public/views/account-item-details.html
@@ -11,7 +11,7 @@
     </md-toolbar>
     <div flex = "100" layout = "row" layout-margin>
         <div id = "itemImgDiv" layout = "column" flex = "50" layout-margin>
-            <img id = "itemImg" src = "http://www.pngall.com/wp-content/uploads/2016/04/Table-High-Quality-PNG.png" height = "200px" width = "100%"/>
+            <img id = "{{item.id}}" src = "" height = "200px" width = "100%"/>
             <br />
             <div flex-offset = "5"><span class = "md-title title">Price : {{item.price |currency}}</span></div>
             <br />
