--- a/front-end/public/partials/items.html
+++ b/front-end/public/partials/items.html
@@ -22,7 +22,7 @@
                     <img id = "{{item.id}}" src = "" heignt = "150" width="150" />
                 </div>
                 <div flex = "100">
-                    <span class="md-title"> {{item.price | currency}}</span>
+                    <span class="md-title"> {{item.price | currency: "SEK" : 0}}</span>
                 </div>
             </md-card-content>
             <md-card-actions layout = "row">
