--- a/front-end/public/partials/account.html
+++ b/front-end/public/partials/account.html
@@ -61,7 +61,7 @@
                     <label>Item Price</label>
                     <input ng-model = "itemPrice" required>
                 </md-input-container>
-                <input type="file" required></input>
+                <input class = "md-raised md-accent" type="file" required></input>
             </div>
             <div layout = "column" flex = "100" layout-align = "end end">
                 <md-button class="md-fab" aria-label="Add Item" ng-click = "uploadItem()"
