--- a/front-end/public/views/item-card.html
+++ b/front-end/public/views/item-card.html
@@ -10,7 +10,7 @@
                 <span class = "md-title">{{item.userId}} </span>
             </div>
             <div layout = "row" >
-                <span class = "md-title">{{item.price |currency}} </span>
+                <span class = "md-title">{{item.price | currency: "SEK" : 0}} </span>
             </div>
         </div>
         <div id = "itemImg" flex = "100" layout = "column">
