--- a/front-end/public/partials/items.html
+++ b/front-end/public/partials/items.html
@@ -11,21 +11,21 @@
     </div>
     <div layout = "row" layout-wrap flex-offset = "10" flex-offset-sm = "0" ng-show = "showItems == true">
         <!--<item-card></item-card>-->
-        <md-card ng-repeat="item in items | filter:search" flex = "30" flex-sm = "100">
-           <md-card-title layout-align = "center center">
+        <md-card ng-repeat="item in items | filter:search" flex = "30" flex-sm = "100" layout = "column">
+           <md-card-title layout-align = "center center" flex = "20">
                 <md-card-title-text id = "cardTitleText" layout-align = "center center">
                     <center><span class="md-headline title">{{item.name}}</span></center>
                 </md-card-title-text>
             </md-card-title>
-            <md-card-content layout = "column" layout-align = "center center">
-                <div flex = "100"> 
-                    <img id = "{{item.id}}" src = "" heignt = "150" width="150" />
+            <md-card-content layout = "column" layout-align = "center center" flex = "60">
+                <div flex = "100" flex = "100"> 
+                    <img id = "{{item.id}}" src = "" heignt = "400px" width = "150px" />
                 </div>
                 <div flex = "100">
                     <span class="md-title"> {{item.price | currency: "SEK" : 0}}</span>
                 </div>
             </md-card-content>
-            <md-card-actions layout = "row">
+            <md-card-actions id = "cardFooter" layout = "row" flex = "20">
                 <div layout = "row" flex = "100">
                     <md-button flex = "100" class = "md-primary md-raised" ng-click = "itemDetails(item.id)">View Details</md-button>
                 </div>
