The user can rate the items he/she won when he logs in

--- a/front-end/public/css/app.css
+++ b/front-end/public/css/app.css
@@ -119,3 +119,6 @@ md-tabs > md-tabs-wrapper > md-tabs-canvas > md-pagination-wrapper > md-tab-item
   margin: 0;
   padding: 0;
 }
+.star:hover {
+    cursor: pointer;
+}
