--- a/front-end/public/partials/account.html
+++ b/front-end/public/partials/account.html
@@ -33,7 +33,7 @@
                 </md-card-title>
                 <md-card-content layout = "column" layout-align = "center center">
                     <div flex = "100"> 
-                        <img id = "{{item.id}}" src = "" heignt = "150" width="150" />
+                        <img id = "{{item.id}}" src = "" heignt = "150px" width="150px" />
                     </div>
                     <div flex = "100">
                         <span class="md-title"> {{item.price | currency: "SEK" : 0}}</span>
