--- a/front-end/public/partials/us.html
+++ b/front-end/public/partials/us.html
@@ -1,1 +1,70 @@
-<h2> ABOUT US </h2>
+<div layout = "row" layout-wrap flex-offset = "10" flex-offset-sm = "0">
+    <md-card flex = "30" flex-sm = "100" layout = "column">
+        <md-card-title layout-align = "center center" flex = "20">
+            <md-card-title-text id = "cardTitleText" layout-align = "center center">
+                <center><span class="md-headline title">AMIR</span></center>
+            </md-card-title-text>
+        </md-card-title>
+        <md-card-content layout = "column" layout-align = "center center" flex = "60">
+            <div flex = "100" flex = "100"> 
+                <!--<img id = "{{item.id}}" src = "" heignt = "400px" width = "150px" />-->
+            </div>
+            <div flex = "100">
+                <span class="md-title"> MONOLITH BREAKER</span>
+            </div>
+        </md-card-content>
+        <md-card-actions id = "cardFooter" layout = "row" flex = "20">
+        </md-card-actions>
+    </md-card>
+    <md-card flex = "30" flex-sm = "100" layout = "column">
+        <md-card-title layout-align = "center center" flex = "20">
+            <md-card-title-text id = "cardTitleText" layout-align = "center center">
+                <center><span class="md-headline title">ARBER</span></center>
+            </md-card-title-text>
+        </md-card-title>
+        <md-card-content layout = "column" layout-align = "center center" flex = "60">
+            <div flex = "100" flex = "100"> 
+                <!--<img id = "{{item.id}}" src = "" heignt = "400px" width = "150px" />-->
+            </div>
+            <div flex = "100">
+                <span class="md-title"> MONOLITH BREAKER</span>
+            </div>
+        </md-card-content>
+        <md-card-actions id = "cardFooter" layout = "row" flex = "20">
+        </md-card-actions>
+    </md-card>
+        <md-card flex = "30" flex-sm = "100" layout = "column">
+        <md-card-title layout-align = "center center" flex = "20">
+            <md-card-title-text id = "cardTitleText" layout-align = "center center">
+                <center><span class="md-headline title">KUSHTRIM</span></center>
+            </md-card-title-text>
+        </md-card-title>
+        <md-card-content layout = "column" layout-align = "center center" flex = "60">
+            <div flex = "100" flex = "100"> 
+                <!--<img id = "{{item.id}}" src = "" heignt = "400px" width = "150px" />-->
+            </div>
+            <div flex = "100">
+                <span class="md-title"> MONOLITH BREAKER</span>
+            </div>
+        </md-card-content>
+        <md-card-actions id = "cardFooter" layout = "row" flex = "20">
+        </md-card-actions>
+    </md-card>
+        <md-card flex = "30" flex-sm = "100" layout = "column">
+        <md-card-title layout-align = "center center" flex = "20">
+            <md-card-title-text id = "cardTitleText" layout-align = "center center">
+                <center><span class="md-headline title">MUHAMMAD RAUF</span></center>
+            </md-card-title-text>
+        </md-card-title>
+        <md-card-content layout = "column" layout-align = "center center" flex = "60">
+            <div flex = "100" flex = "100"> 
+                <!--<img id = "{{item.id}}" src = "" heignt = "400px" width = "150px" />-->
+            </div>
+            <div flex = "100">
+                <span class="md-title"> MONOLITH BREAKER</span>
+            </div>
+        </md-card-content>
+        <md-card-actions id = "cardFooter" layout = "row" flex = "20">
+        </md-card-actions>
+    </md-card>
+</div>
