Rating showed in the items....

--- a/front-end/public/partials/items.html
+++ b/front-end/public/partials/items.html
@@ -18,11 +18,14 @@
                 </md-card-title-text>
             </md-card-title>
             <md-card-content layout = "column" layout-align = "center center" flex = "60">
-                <div flex = "70" > 
+                <div flex = "50" > 
                     <img id = "{{item.id}}" src = "" heignt = "400px" width = "150px" />
                 </div>
-                <div flex = "30">
+                <div flex = "25">
                     <span class="md-title"> {{item.price | currency: "SEK" : 0}}</span>
+                </div>
+                <div flex = "25">
+                    <span id = "rating_{{item.id}}" class="md-title">.....</span>
                 </div>
             </md-card-content>
             <md-card-actions id = "cardFooter" layout = "row" flex = "20">
