--- a/front-end/public/partials/account.html
+++ b/front-end/public/partials/account.html
@@ -25,22 +25,24 @@
             <!-- filtering will go here -->
         </div>
         <div layout = "row" layout-wrap flex-offset-sm = "0" ng-show = "myItems.length > 0">
-            <md-card ng-repeat="item in myItems" flex = "30" flex-sm = "100" >
-                <md-card-title layout-align = "center center">
-                    <md-card-title-text layout-align = "center center">
-                        <center><span class="md-headline title">{{item.name}}</span></center>
-                    </md-card-title-text>
-                </md-card-title>
-                <md-card-content layout = "column" layout-align = "center center">
-                    <div flex = "100"> 
-                        <img id = "{{item.id}}" src = "" heignt = "150px" width="150px" />
+            <md-card id = "itemCard" ng-repeat="item in myItems" flex = "30" flex-sm = "100" layout = "column">
+                <md-card-title-text layout-align = "center center" flex = "10">
+                    <center><span class="md-headline title">{{item.name}}</span></center>
+                </md-card-title-text>
+                <md-card-content layout = "column" flex = "75">
+                    <div flex = "80" id = "imgDiv" layout = "row">
+                        <div layout-align = "center center">
+                            <img id = "{{item.id}}" src = ""  height = "210px" width="100%" />
+                        </div>
                     </div>
-                    <div flex = "100">
-                        <span class="md-title"> {{item.price | currency: "SEK" : 0}}</span>
+                    <div flex = "20" layout = "row" >
+                        <div layout-align = "center center" flex = "100">
+                            <center><span class="md-headline title"> {{item.price | currency: "SEK" : 0}}</span></center>
+                        </div>
                     </div>
                 </md-card-content>
-                <md-card-actions layout = "row">
-                    <div layout = "row" flex = "100">
+                <md-card-actions flex = "15" layout = "row" layout-align = "center center">
+                    <div layout-align = "center center" flex = "100" layout = "row">
                         <md-button flex = "100" class = "md-primary md-raised" ng-click = "seeItemDetails(item.id)">View Details</md-button>
                     </div>
                 </md-card-actions>
